# pacman-with-physics

./: Cargo.toml
src/: main.rs
src/nphysics_testbed2d/: Cargo.toml
src/nphysics_testbed2d/src/: engine.rs  nphysics_testbed2d.rs
src/nphysics_testbed2d/src/objects/: ball.rs  box_node.rs  ghost.rs  lines.rs  objects.rs
